--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mariadb": "^3.3.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
