--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.24.13",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.13.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
