--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.561.0",
     "mariadb": "^3.3.0",
-    "next": "^16.0.10",
+    "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.13.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
@@ -53,10 +53,10 @@
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "16.1.1",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
