--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
+    "react-paystack": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
